Some tweeks to the styles to get things a bit more the way I like them. This removed the need for <CENTER> tags in the bandwidth hack. Fixed the "lost" style class for tableframe-row-last General cleanup of the bandwidth tables. Removed the wrong font size specification from the management styles.

--- a/innerframe/table.css
+++ b/innerframe/table.css
@@ -13,18 +13,25 @@
 .tableframe-row-even
 {
   background-color: #FFFFFF;
-  vertical-align: baseline;
-  text-align: left;
 }
 
 .tableframe-row-odd
 {
   background-color: #F4F4F4;
+}
+
+.tableframe-row-last
+{
+  background-color: #E4E4E4;
+}
+
+.tableframe-row-even, .tableframe-row-odd, .tableframe-row-last
+{
   vertical-align: baseline;
   text-align: left;
 }
 
-.tableframe-row-odd td, .tableframe-row-even td
+.tableframe-row-even td, .tableframe-row-odd td, .tableframe-row-last td
 {
   padding: 1px;
 }
