--- a/styles.css
+++ b/styles.css
@@ -714,3 +714,23 @@ td.details
   margin-right: 80%;
 }
 
+/* This stuff is here to "fix up" some of the bandwidth layout */
+.bandwidth
+{
+  text-align: center;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+.bandwidth p
+{
+  margin: 0.3em;
+}
+
+.bandwidth table
+{
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+}
+
